# Unified-PDF-Toolkit

./: .gitignore  README.md  pyproject.toml  run-macos.command  run-windows.bat  verify_install.py
docs/: pdf_to_word_plan.md
src/: app.py
src/base/: tool.py
src/core/: base.py  processor.py
src/handlers/: image.py  pdf.py  text.py
src/tools/compressor/: tool.py
src/tools/converter/: tool.py
src/tools/image2pdf/: __init__.py  tool.py
src/tools/merger/: tool.py
src/tools/page_manager/: __init__.py  tool.py
src/tools/pdf2word/: __init__.py  tool.py
src/tools/splitter/: tool.py
src/ui/: components.py
src/utils/: file_ops.py  logger.py  settings.py
tests/: test_workflows.py
